add submit and result button

--- a/javajquery-project.html
+++ b/javajquery-project.html
@@ -7,11 +7,11 @@
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/scripts.js"></script>
 </head>
-<body>
-  <div id="main">
-    <div id="header">
+  <body>
+    <div id="main">
+      <div id="header">
       <h1>What programming language should I use?</h1>
-    </div>
+     </div>
 <form id="questionsform">
 
   <h2>What company would you want to work for after school?</h2>
@@ -51,3 +51,12 @@
     <input type="checkbox" id="expereince-ruby" name="experience" value="3">
     <label for="expereince-ruby">Tons and Tons of expereince!</label>
   </div>
+  <button type="submit" value="Submit">Submit</button>
+
+</form>
+        
+<p>The programming language you should use is <span id="result">__</span></p>
+<p id="result2"></p>
+    </div>
+  </body>
+</html>
